--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
 		"php": ">=5.5"
     },
 	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+		"phpunit/phpunit": "5.2.*",
+        "doctrine/dbal": "^2.5",
+        "doctrine/orm": "^2.5",
+        "doctrine/common": "^2.6"
     },
 	"autoload": {
         "psr-4": {
